--- a/index.html
+++ b/index.html
@@ -494,14 +494,14 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/01.jpg"
+                src="img/portfolio/Portfolio0/01.png"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/01.jpg"
+                  href="img/portfolio/Portfolio0/01.png"
                   data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
@@ -513,14 +513,14 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/02.jpg"
+                src="img/portfolio/Portfolio0/02.png"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/02.jpg"
+                  href="img/portfolio/Portfolio0/02.png"
                   data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
@@ -532,14 +532,14 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/03.jpg"
+                src="img/portfolio/Portfolio0/03.png"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/03.jpg"
+                  href="img/portfolio/Portfolio0/03.png"
                   data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
@@ -551,14 +551,14 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/04.jpg"
+                src="img/portfolio/Portfolio0/04.png"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/04.jpg"
+                  href="img/portfolio/Portfolio0/04.png"
                   data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
@@ -570,14 +570,14 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/05.jpg"
+                src="img/portfolio/Portfolio0/05.png"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/05.jpg"
+                  href="img/portfolio/Portfolio0/05.png"
                   data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
@@ -589,14 +589,14 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/06.jpg"
+                src="img/portfolio/Portfolio0/06.png"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/06.jpg"
+                  href="img/portfolio/Portfolio0/06.png"
                   data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
@@ -608,15 +608,15 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/07.jpg"
+                src="img/portfolio/Portfolio0/07.png"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/07.jpg"
-                  data-lightbox="portfolio0"
+                  href="img/portfolio/Portfolio0/07.png"
+                  data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
                 </a>
@@ -627,14 +627,52 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/08.jpg"
+                src="img/portfolio/Portfolio0/08.png"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/08.jpg"
+                  href="img/portfolio/Portfolio0/08.png"
+                  data-lightbox="portfolio"
+                >
+                  <i class="fa fa-plus text-white" style="font-size: 60px"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4 portfolio-item portfolio0">
+            <div class="position-relative overflow-hidden mb-2">
+              <img
+                class="img-fluid rounded w-100"
+                src="img/portfolio/Portfolio0/09.png"
+                alt=""
+              />
+              <div
+                class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
+              >
+                <a
+                  href="img/portfolio/Portfolio0/09.png"
+                  data-lightbox="portfolio"
+                >
+                  <i class="fa fa-plus text-white" style="font-size: 60px"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4 portfolio-item portfolio0">
+            <div class="position-relative overflow-hidden mb-2">
+              <img
+                class="img-fluid rounded w-100"
+                src="img/portfolio/Portfolio0/10.png"
+                alt=""
+              />
+              <div
+                class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
+              >
+                <a
+                  href="img/portfolio/Portfolio0/10.png"
                   data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
