--- a/index.html
+++ b/index.html
@@ -494,14 +494,14 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/01.png"
+                src="img/portfolio/Portfolio0/01.jpg"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/01.png"
+                  href="img/portfolio/Portfolio0/01.jpg"
                   data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
@@ -513,14 +513,14 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/02.png"
+                src="img/portfolio/Portfolio0/02.jpg"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/02.png"
+                  href="img/portfolio/Portfolio0/02.jpg"
                   data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
@@ -532,14 +532,14 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/03.png"
+                src="img/portfolio/Portfolio0/03.jpg"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/03.png"
+                  href="img/portfolio/Portfolio0/03.jpg"
                   data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
@@ -551,14 +551,14 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/04.png"
+                src="img/portfolio/Portfolio0/04.jpg"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/04.png"
+                  href="img/portfolio/Portfolio0/04.jpg"
                   data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
@@ -570,14 +570,14 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/05.png"
+                src="img/portfolio/Portfolio0/05.jpg"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/05.png"
+                  href="img/portfolio/Portfolio0/05.jpg"
                   data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
@@ -589,14 +589,14 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/06.png"
+                src="img/portfolio/Portfolio0/06.jpg"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/06.png"
+                  href="img/portfolio/Portfolio0/06.jpg"
                   data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
@@ -608,14 +608,14 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/07.png"
+                src="img/portfolio/Portfolio0/07.jpg"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/07.png"
+                  href="img/portfolio/Portfolio0/07.jpg"
                   data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
@@ -627,14 +627,14 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/08.png"
+                src="img/portfolio/Portfolio0/08.jpg"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/08.png"
+                  href="img/portfolio/Portfolio0/08.jpg"
                   data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
@@ -646,14 +646,14 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/09.png"
+                src="img/portfolio/Portfolio0/09.jpg"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/09.png"
+                  href="img/portfolio/Portfolio0/09.jpg"
                   data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
@@ -665,14 +665,14 @@
             <div class="position-relative overflow-hidden mb-2">
               <img
                 class="img-fluid rounded w-100"
-                src="img/portfolio/Portfolio0/10.png"
+                src="img/portfolio/Portfolio0/10.jpg"
                 alt=""
               />
               <div
                 class="portfolio-btn bg-primary d-flex align-items-center justify-content-center"
               >
                 <a
-                  href="img/portfolio/Portfolio0/10.png"
+                  href="img/portfolio/Portfolio0/10.jpg"
                   data-lightbox="portfolio"
                 >
                   <i class="fa fa-plus text-white" style="font-size: 60px"></i>
