--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
           <a href="#qualification" class="nav-item nav-link">Quality</a>
           <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
         </div>
-        <a href="" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
       </div>
     </nav>
     <!-- Navbar End -->
@@ -116,7 +115,7 @@
             <h3 class="text-white font-weight-normal mb-3">I'm</h3>
             <h1
               class="display-3 text-uppercase text-primary mb-2"
-              style="-webkit-text-stroke: 2px #ffffff"
+              style="color: #ffffff !important"
             >
               Mustafa Sultan
             </h1>
@@ -196,19 +195,6 @@
             <div class="row mb-3">
               <div class="col-sm-6 py-2">
                 <h6>
-                  Phone: <span class="text-secondary">+92 345 4391913</span>
-                </h6>
-              </div>
-              <div class="col-sm-6 py-2">
-                <h6>
-                  Email:
-                  <span class="text-secondary"
-                    >Mustafarajpoot13579@gmail.com</span
-                  >
-                </h6>
-              </div>
-              <div class="col-sm-6 py-2">
-                <h6>
                   Address:
                   <span class="text-secondary"
                     >House no 4, 25/A, Habibullah Road, Garhi Shahu, Lahore,
@@ -217,16 +203,6 @@
                 </h6>
               </div>
             </div>
-            <a
-              href="https://ensquareprintpackages.com/"
-              class="btn btn-outline-primary mr-4"
-              >Hire Me</a
-            >
-            <a
-              href="https://ensquareprintpackages.com/"
-              class="btn btn-outline-primary"
-              >Learn More</a
-            >
           </div>
         </div>
       </div>
